# elpytest

./: README.md
.ci/scripts/: pytest_win.bat
.github/workflows/: debug.yml  publish.yml  test.yml
app/: package.json
app/.erb/dll/: renderer.dev.dll.js
app/release/app/: package-lock.json  package.json
app/src/__tests__/: App.test.tsx
app/src/renderer/: App.global.css  App.tsx
config/: project.env  repo.env  secrets.env
server/: .coveragerc  README.md  pyproject.toml
server/elpytest_server/: __init__.py
server/tests/: test_main.py
